--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.bowen.timenetwork.activity.ContentActivity">
+    >
     <android.support.v4.view.ViewPager
         android:layout_above="@+id/rg_content"
         android:layout_width="match_parent"
@@ -18,7 +18,7 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     >
-    <RadioBuvtton
+    <RadioButton
         android:clickable="true"
         android:padding="10dp"
         android:layout_weight="1"
