--- a/app/src/main/res/layout/item_grid_position.xml
+++ b/app/src/main/res/layout/item_grid_position.xml
@@ -4,8 +4,9 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:gravity="center"
-        android:id="@+id/tv_item_ry_position"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:paddingTop="15dp"
+        android:layout_gravity="center"
+        android:id="@+id/tv_item_gv_position"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </FrameLayout>
