--- a/app/src/main/res/layout/position_adapter_item.xml
+++ b/app/src/main/res/layout/position_adapter_item.xml
@@ -3,14 +3,18 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 <TextView
+    android:gravity="center_vertical"
+    android:paddingLeft="10dp"
     android:id="@+id/tv_item_position"
-
+    android:background="@drawable/comments_background"
     android:layout_width="match_parent"
-    android:layout_height="45dp" />
-    <com.bowen.timenetwork.view.MyRecyclerView
+    android:layout_height="30dp" />
+    <com.bowen.timenetwork.view.MyGridView
+        android:numColumns="4"
+        android:stretchMode="columnWidth"
         android:layout_gravity="center_horizontal"
-        android:id="@+id/rv_item_position"
+        android:id="@+id/gv_item_position"
         android:layout_width="match_parent"
-        android:layout_height="400dp">
-    </com.bowen.timenetwork.view.MyRecyclerView>
+        android:layout_height="wrap_content">
+    </com.bowen.timenetwork.view.MyGridView>
 </LinearLayout>
