--- a/app/src/main/res/layout/activity_positioning.xml
+++ b/app/src/main/res/layout/activity_positioning.xml
@@ -8,6 +8,6 @@
     <ListView
         android:id="@+id/lv_position"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
     </ListView>
 </RelativeLayout>
