--- a/app/src/main/res/layout/layout_headerview.xml
+++ b/app/src/main/res/layout/layout_headerview.xml
@@ -70,4 +70,9 @@
         android:layout_height="wrap_content">
     </com.bowen.timenetwork.view.MyGridView>
     </LinearLayout>
+    <com.bowen.timenetwork.view.MyListView
+       android:visibility="gone"
+        android:id="@+id/lv_header"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></com.bowen.timenetwork.view.MyListView>
 </LinearLayout>
