--- a/app/src/main/res/layout/title_layout_two.xml
+++ b/app/src/main/res/layout/title_layout_two.xml
@@ -1,10 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="false"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".activity.PositioningActivity">
+<LinearLayout
+    android:id="@+id/ll_header_two"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="280dp">
     <TextView
-        android:text="2222"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:text="5555"
+        android:layout_width="match_parent"
+        android:layout_height="20dp" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rlv_view_two"
+        android:layout_width="match_parent"
+        android:layout_height="180dp"/>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="50dp" />
+    <TextView
+        android:text="5555"
+        android:layout_width="match_parent"
+        android:layout_height="20dp" />
 </LinearLayout>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        app:layout_behavior="@string/header_float_behavior"
+        >
+        <TextView
+            android:text="2222222"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
+    <android.support.v7.widget.RecyclerView
+        app:layout_behavior="@string/header_scrolling_behavior"
+        android:id="@+id/rlv_view_two_to"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+</android.support.design.widget.CoordinatorLayout>
