--- a/app/src/main/res/layout/view_one_adapter_item.xml
+++ b/app/src/main/res/layout/view_one_adapter_item.xml
@@ -9,6 +9,15 @@
     android:src="@drawable/white_btn"
     android:layout_width="100dp"
     android:layout_height="150dp" />
+    <ImageView
+        android:visibility="gone"
+        android:scaleType="fitXY"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="5dp"
+        android:id="@+id/iv_view_one_item_gone"
+        android:src="@drawable/icon_new_home"
+        android:layout_width="50dp"
+        android:layout_height="50dp" />
     <LinearLayout
         android:layout_marginLeft="10dp"
         android:layout_toRightOf="@id/iv_view_one_item"
@@ -66,17 +75,20 @@
             android:layout_width="wrap_content"
             android:layout_height="0dp">
             <ImageView
+                android:visibility="gone"
                 android:id="@+id/iv_one_3d"
                 android:src="@drawable/rectangle3d"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <ImageView
+                android:visibility="gone"
                 android:layout_marginLeft="5dp"
                 android:id="@+id/iv_one_imax"
                 android:src="@drawable/rectangleimax"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <ImageView
+                android:visibility="gone"
                 android:layout_marginLeft="5dp"
                 android:id="@+id/iv_one_larget"
                 android:src="@drawable/rectanglelarget"
@@ -85,6 +97,7 @@
         </LinearLayout>
     </LinearLayout>
     <Button
+        android:id="@+id/btn_one_pay"
         android:layout_marginBottom="5dp"
         android:layout_marginRight="5dp"
         android:layout_alignBottom="@id/iv_view_one_item"
