--- a/app/src/main/res/layout/header_item.xml
+++ b/app/src/main/res/layout/header_item.xml
@@ -3,6 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 <TextView
+    android:text="54545454545"
     android:gravity="center"
     android:id="@+id/tv_header_item"
     android:layout_width="wrap_content"
