--- a/app/src/main/res/layout/view_two_adapter_to_item.xml
+++ b/app/src/main/res/layout/view_two_adapter_to_item.xml
@@ -1,37 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-     android:layout_width="wrap_content"
+    android:descendantFocusability="blocksDescendants"
+    android:focusable="false"
+    android:layout_marginTop="20dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
-    <LinearLayout
-        android:id="@+id/ll_two_item"
-        android:orientation="horizontal"
-        android:layout_width="300dp"
-        android:layout_height="30dp">
+        <View
+            android:layout_marginTop="5dp"
+            android:id="@+id/view_two_to"
+            android:background="#88888888"
+            android:layout_width="match_parent"
+            android:layout_height="1dp" />
     <TextView
-        android:id="@+id/tv_two_item_month"
-        android:gravity="center"
+        android:layout_marginLeft="5dp"
         android:layout_marginTop="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_width="60dp"
-        android:layout_height="match_parent" />
-    <View
-        android:id="@+id/view_two"
-        android:background="#88888888"
-        android:layout_gravity="center_vertical"
-        android:layout_width="240dp"
-        android:layout_height="1dp" />
-    </LinearLayout>
+        android:layout_below="@+id/view_two_to"
+        android:id="@+id/tv_two_to_day"
+        android:layout_width="50dp"
+        android:layout_height="50dp" />
     <ImageView
-        android:id="@+id/iv_two_item"
+        android:layout_marginTop="5dp"
+        android:layout_toRightOf="@+id/tv_two_to_day"
+        android:id="@+id/iv_two_item_to"
         android:layout_marginLeft="5dp"
-        android:layout_below="@+id/ll_two_item"
+        android:layout_below="@+id/view_two_to"
         android:layout_width="100dp"
         android:layout_height="150dp" />
     <RelativeLayout
+        android:layout_marginTop="5dp"
         android:id="@+id/ll_two_to"
-        android:layout_toRightOf="@+id/iv_two_item"
+        android:layout_toRightOf="@+id/iv_two_item_to"
         android:layout_marginLeft="5dp"
-        android:layout_below="@+id/ll_two_item"
+        android:layout_below="@+id/view_two_to"
         android:layout_width="200dp"
         android:layout_height="150dp">
         <TextView
@@ -39,50 +39,41 @@
             android:textColor="@android:color/black"
             android:ellipsize="end"
             android:lines="1"
-            android:id="@+id/tv_two_item_name"
+            android:id="@+id/tv_two_item_name_to"
             android:text="1111"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         <TextView
-            android:layout_below="@+id/tv_two_item_name"
+            android:layout_below="@+id/tv_two_item_name_to"
             android:textSize="15sp"
             android:ellipsize="end"
             android:lines="1"
-            android:id="@+id/tv_two_item_type"
+            android:id="@+id/tv_two_item_type_to"
             android:text="1111"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         <TextView
-            android:layout_below="@+id/tv_two_item_type"
+            android:layout_below="@+id/tv_two_item_type_to"
             android:textSize="15sp"
             android:lines="1"
             android:ellipsize="end"
-            android:id="@+id/tv_two_item_director"
-            android:text="1111"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:layout_below="@+id/tv_two_item_director"
-            android:textSize="15sp"
-            android:ellipsize="end"
-            android:lines="1"
-            android:id="@+id/tv_two_item_actor"
+            android:id="@+id/tv_two_item_director_to"
             android:text="1111"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         <LinearLayout
             android:layout_alignParentBottom="true"
-            android:layout_below="@+id/tv_two_item_actor"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <Button
+                android:focusable="false"
                 android:padding="0dp"
                 android:textSize="10sp"
                 android:layout_weight="4"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:id="@+id/btn_two_one"
+                android:id="@+id/btn_two_one_to"
                 android:layout_width="0dp"
                 android:layout_height="30dp" />
             <Button
@@ -93,15 +84,9 @@
                 android:layout_marginLeft="10dp"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:id="@+id/btn_two_two"
+                android:id="@+id/btn_two_two_to"
                 android:layout_width="0dp"
                 android:layout_height="30dp" />
         </LinearLayout>
     </RelativeLayout>
-    <View
-        android:background="#88888888"
-        android:layout_marginTop="15dp"
-        android:layout_alignRight="@+id/ll_two_item"
-        android:layout_width="1dp"
-        android:layout_height="150dp" />
 </RelativeLayout>
