--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -15,7 +15,7 @@
     android:layout_alignParentBottom="true"
     android:layout_centerInParent="true"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="40dp"
     android:orientation="horizontal"
     >
     <RadioButton
